--- a/jsonnet/prometheus-operator/scrapeconfigs-crd.json
+++ b/jsonnet/prometheus-operator/scrapeconfigs-crd.json
@@ -45,7 +45,7 @@
                 "description": "ScrapeConfigSpec is a specification of the desired configuration for a scrape configuration.",
                 "properties": {
                   "authorization": {
-                    "description": "Authorization section for this endpoint",
+                    "description": "Authorization header to use on every scrape request.",
                     "properties": {
                       "credentials": {
                         "description": "The secret's key that contains the credentials of the request",
@@ -77,7 +77,7 @@
                     "type": "object"
                   },
                   "basicAuth": {
-                    "description": "BasicAuth allow an endpoint to authenticate over basic authentication More info: https://prometheus.io/docs/operating/configuration/#endpoints",
+                    "description": "BasicAuth information to use on every scrape request.",
                     "properties": {
                       "password": {
                         "description": "The secret in the service monitor namespace that contains the password for authentication.",
@@ -168,7 +168,7 @@
                       "description": "HTTPSDConfig defines a prometheus HTTP service discovery configuration See https://prometheus.io/docs/prometheus/latest/configuration/configuration/#http_sd_config",
                       "properties": {
                         "authorization": {
-                          "description": "Authorization section for this endpoint",
+                          "description": "Authorization header configuration to authenticate against the target HTTP endpoint.",
                           "properties": {
                             "credentials": {
                               "description": "The secret's key that contains the credentials of the request",
@@ -200,7 +200,7 @@
                           "type": "object"
                         },
                         "basicAuth": {
-                          "description": "BasicAuth allow an endpoint to authenticate over basic authentication More info: https://prometheus.io/docs/operating/configuration/#endpoints",
+                          "description": "BasicAuth information to authenticate against the target HTTP endpoint. More info: https://prometheus.io/docs/operating/configuration/#endpoints",
                           "properties": {
                             "password": {
                               "description": "The secret in the service monitor namespace that contains the password for authentication.",
