--- a/example/prometheus-operator-crd/monitoring.coreos.com_prometheusagents.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_prometheusagents.yaml
@@ -75,8 +75,8 @@ spec:
                   which may cause issues if they are invalid or not supported by the
                   given Prometheus version. \n In case of an argument conflict (e.g.
                   an argument which is already set by the operator itself) or when
-                  providing an invalid argument the reconciliation will fail and an
-                  error will be logged."
+                  providing an invalid argument, the reconciliation will fail and
+                  an error will be logged."
                 items:
                   description: Argument as part of the AdditionalArgs list.
                   properties:
@@ -2577,7 +2577,7 @@ spec:
                       type: string
                     name:
                       description: Name of the referent. When not set, all resources
-                        are matched.
+                        in the namespace are matched.
                       type: string
                     namespace:
                       description: 'Namespace of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/'
@@ -2646,13 +2646,13 @@ spec:
                   and Probe objec.
                 type: boolean
               image:
-                description: Container image name for Prometheus. If specified, it
+                description: "Container image name for Prometheus. If specified, it
                   takes precedence over the `spec.baseImage`, `spec.tag` and `spec.sha`
-                  fields. Specifying `spec.version` is still necessary to ensure the
-                  Prometheus Operator knows which version of Prometheus is being configured.
-                  If neither `spec.image` nor `spec.baseImage` are defined, the operator
-                  will use the latest upstream version of Prometheus available at
-                  the time when the operator was released.
+                  fields. \n Specifying `spec.version` is still necessary to ensure
+                  the Prometheus Operator knows which version of Prometheus is being
+                  configured. \n If neither `spec.image` nor `spec.baseImage` are
+                  defined, the operator will use the latest upstream version of Prometheus
+                  available at the time when the operator was released."
                 type: string
               imagePullPolicy:
                 description: Image pull policy for the 'prometheus', 'init-config-reloader'
@@ -4267,7 +4267,9 @@ spec:
                     samples from Prometheus to a remote endpoint.
                   properties:
                     authorization:
-                      description: Authorization section for remote write
+                      description: "Authorization section for the URL. \n It requires
+                        Prometheus >= v2.26.0. \n Cannot be set at the same time as
+                        `sigv4`, `basicAuth`, or `oauth2`."
                       properties:
                         credentials:
                           description: The secret's key that contains the credentials
@@ -4299,7 +4301,8 @@ spec:
                           type: string
                       type: object
                     basicAuth:
-                      description: BasicAuth for the URL.
+                      description: "BasicAuth configuration for the URL. \n Cannot
+                        be set at the same time as `sigv4`, `authorization`, or `oauth2`."
                       properties:
                         password:
                           description: The secret in the service monitor namespace
@@ -4343,18 +4346,22 @@ spec:
                           x-kubernetes-map-type: atomic
                       type: object
                     bearerToken:
-                      description: Bearer token for remote write.
+                      description: "*Warning: this field shouldn't used because the
+                        token value appears in clear-text. Prefer using `authorization`.*
+                        \n *Deprecated: this will be removed in a future release.*"
                       type: string
                     bearerTokenFile:
-                      description: File to read bearer token for remote write.
+                      description: "File from which to read bearer token for the URL.
+                        \n *Deprecated: this will be removed in a future release.
+                        Prefer using `authorization`.*"
                       type: string
                     headers:
                       additionalProperties:
                         type: string
-                      description: Custom HTTP headers to be sent along with each
+                      description: "Custom HTTP headers to be sent along with each
                         remote write request. Be aware that headers that are set by
-                        Prometheus itself can't be overwritten. Only valid in Prometheus
-                        versions 2.25.0 and newer.
+                        Prometheus itself can't be overwritten. \n It requires Prometheus
+                        >= v2.25.0."
                       type: object
                     metadataConfig:
                       description: MetadataConfig configures the sending of series
@@ -4371,14 +4378,15 @@ spec:
                           type: string
                       type: object
                     name:
-                      description: The name of the remote write queue, it must be
+                      description: "The name of the remote write queue, it must be
                         unique if specified. The name is used in metrics and logging
-                        in order to differentiate queues. Only valid in Prometheus
-                        versions 2.15.0 and newer.
+                        in order to differentiate queues. \n It requires Prometheus
+                        >= v2.15.0."
                       type: string
                     oauth2:
-                      description: OAuth2 for the URL. Only valid in Prometheus versions
-                        2.27.0 and newer.
+                      description: "OAuth2 configuration for the URL. \n It requires
+                        Prometheus >= v2.27.0. \n Cannot be set at the same time as
+                        `sigv4`, `authorization`, or `basicAuth`."
                       properties:
                         clientId:
                           description: The secret or configmap containing the OAuth2
@@ -4512,23 +4520,25 @@ spec:
                       pattern: ^(0|(([0-9]+)y)?(([0-9]+)w)?(([0-9]+)d)?(([0-9]+)h)?(([0-9]+)m)?(([0-9]+)s)?(([0-9]+)ms)?)$
                       type: string
                     sendExemplars:
-                      description: Enables sending of exemplars over remote write.
+                      description: "Enables sending of exemplars over remote write.
                         Note that exemplar-storage itself must be enabled using the
-                        enableFeature option for exemplars to be scraped in the first
-                        place.  Only valid in Prometheus versions 2.27.0 and newer.
+                        `spec.enableFeature` option for exemplars to be scraped in
+                        the first place. \n It requires Prometheus >= v2.27.0."
                       type: boolean
                     sendNativeHistograms:
-                      description: Enables sending of native histograms, also known
-                        as sparse histograms over remote write. Only valid in Prometheus
-                        versions 2.40.0 and newer.
+                      description: "Enables sending of native histograms, also known
+                        as sparse histograms over remote write. \n It requires Prometheus
+                        >= v2.40.0."
                       type: boolean
                     sigv4:
-                      description: Sigv4 allows to configures AWS's Signature Verification
-                        4
+                      description: "Sigv4 allows to configures AWS's Signature Verification
+                        4 for the URL. \n It requires Prometheus >= v2.26.0. \n Cannot
+                        be set at the same time as `authorization`, `basicAuth`, or
+                        `oauth2`."
                       properties:
                         accessKey:
-                          description: AccessKey is the AWS API key. If blank, the
-                            environment variable `AWS_ACCESS_KEY_ID` is used.
+                          description: AccessKey is the AWS API key. If not specified,
+                            the environment variable `AWS_ACCESS_KEY_ID` is used.
                           properties:
                             key:
                               description: The key of the secret to select from.  Must
@@ -4557,7 +4567,7 @@ spec:
                           description: RoleArn is the named AWS profile used to authenticate.
                           type: string
                         secretKey:
-                          description: SecretKey is the AWS API secret. If blank,
+                          description: SecretKey is the AWS API secret. If not specified,
                             the environment variable `AWS_SECRET_ACCESS_KEY` is used.
                           properties:
                             key:
@@ -4578,7 +4588,7 @@ spec:
                           x-kubernetes-map-type: atomic
                       type: object
                     tlsConfig:
-                      description: TLS Config to use for remote write.
+                      description: TLS Config to use for the URL.
                       properties:
                         ca:
                           description: Certificate authority used when verifying server
@@ -4797,7 +4807,7 @@ spec:
               replicas:
                 description: "Number of replicas of each shard to deploy for a Prometheus
                   deployment. `spec.replicas` multiplied by `spec.shards` is the total
-                  number of Pods created. \n Default: 1."
+                  number of Pods created. \n Default: 1"
                 format: int32
                 type: integer
               resources:
@@ -5269,14 +5279,13 @@ spec:
                 description: Storage defines the storage used by Prometheus.
                 properties:
                   disableMountSubPath:
-                    description: 'Deprecated: subPath usage will be disabled by default
-                      in a future release, this option will become unnecessary. DisableMountSubPath
-                      allows to remove any subPath usage in volume mounts.'
+                    description: '*Deprecated: subPath usage will be removed in a
+                      future release.*'
                     type: boolean
                   emptyDir:
                     description: 'EmptyDirVolumeSource to be used by the StatefulSet.
-                      If specified, used in place of any volumeClaimTemplate. More
-                      info: https://kubernetes.io/docs/concepts/storage/volumes/#emptydir'
+                      If specified, it takes precedence over `ephemeral` and `volumeClaimTemplate`.
+                      More info: https://kubernetes.io/docs/concepts/storage/volumes/#emptydir'
                     properties:
                       medium:
                         description: 'medium represents what type of storage medium
@@ -5300,8 +5309,8 @@ spec:
                     type: object
                   ephemeral:
                     description: 'EphemeralVolumeSource to be used by the StatefulSet.
-                      This is a beta field in k8s 1.21, for lower versions, starting
-                      with k8s 1.19, it requires enabling the GenericEphemeralVolume
+                      This is a beta field in k8s 1.21 and GA in 1.15. For lower versions,
+                      starting with k8s 1.19, it requires enabling the GenericEphemeralVolume
                       feature gate. More info: https://kubernetes.io/docs/concepts/storage/ephemeral-volumes/#generic-ephemeral-volumes'
                     properties:
                       volumeClaimTemplate:
@@ -5561,10 +5570,10 @@ spec:
                         type: object
                     type: object
                   volumeClaimTemplate:
-                    description: A PVC spec to be used by the StatefulSet. The easiest
-                      way to use a volume that cannot be automatically provisioned
-                      (for whatever reason) is to use a label selector alongside manually
-                      created PersistentVolumes.
+                    description: Defines the PVC spec to be used by the Prometheus
+                      StatefulSets. The easiest way to use a volume that cannot be
+                      automatically provisioned is to use a label selector alongside
+                      manually created PersistentVolumes.
                     properties:
                       apiVersion:
                         description: 'APIVersion defines the versioned schema of this
@@ -5609,8 +5618,8 @@ spec:
                             type: string
                         type: object
                       spec:
-                        description: 'Spec defines the desired characteristics of
-                          a volume requested by a pod author. More info: https://kubernetes.io/docs/concepts/storage/persistent-volumes#persistentvolumeclaims'
+                        description: 'Defines the desired characteristics of a volume
+                          requested by a pod author. More info: https://kubernetes.io/docs/concepts/storage/persistent-volumes#persistentvolumeclaims'
                         properties:
                           accessModes:
                             description: 'accessModes contains the desired access
@@ -5823,8 +5832,7 @@ spec:
                             type: string
                         type: object
                       status:
-                        description: 'Status represents the current information/status
-                          of a persistent volume claim. Read-only. More info: https://kubernetes.io/docs/concepts/storage/persistent-volumes#persistentvolumeclaims'
+                        description: '*Deprecated: this field is never set.*'
                         properties:
                           accessModes:
                             description: 'accessModes contains the actual access modes
@@ -6308,9 +6316,11 @@ spec:
                 - endpoint
                 type: object
               version:
-                description: Version of Prometheus to be deployed. If not specified,
-                  the operator assumes the latest upstream version of Prometheus available
-                  at the time when the version of the operator was released.
+                description: "Version of Prometheus being deployed. The operator uses
+                  this information to generate the Prometheus StatefulSet + configuration
+                  files. \n If not specified, the operator assumes the latest upstream
+                  version of Prometheus available at the time when the version of
+                  the operator was released."
                 type: string
               volumeMounts:
                 description: "VolumeMounts allows the configuration of additional
@@ -7979,7 +7989,7 @@ spec:
                     minimum: 0
                     type: integer
                   pageTitle:
-                    description: The prometheus web page title
+                    description: The prometheus web page title.
                     type: string
                   tlsConfig:
                     description: Defines the TLS parameters for HTTPS.
